# NER-approaches

./: Natasha.ipynb  README.md  ai-forever_bert_base_reptile.ipynb  ai-forever_rubert_base.ipynb  bert.ipynb  bert_collection3.ipynb  dictionary_based.ipynb  dictionary_based_uzbek.ipynb  google_bert_base.ipynb  google_bert_base_multilingual.ipynb  hist.ipynb  ml-crf-ner.ipynb  pyproject.toml  results_f1.xlsx
