[tool.poetry]
name = "ner-approaches"
version = "0.1.0"
description = ""
authors = ["puck3 <shipilovk04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
transformers = {extras = ["torch"], version = "^4.42.3"}
datasets = "^2.20.0"
jupyter = "^1.0.0"
notebook = "^7.2.1"
seqeval = "^1.2.2"
torch = "^2.3.1"
accelerate = "^0.32.0"
evaluate = "^0.4.2"
corus = "^0.10.0"
razdel = "^0.5.0"
nltk = "^3.8.1"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"
openpyxl = "^3.1.5"
conllu = "^4.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
